used pylint on the entire repo

--- a/analysis/Exploratory_analysis.ipynb
+++ b/analysis/Exploratory_analysis.ipynb
@@ -2159,6 +2159,164 @@
    "source": [
     "df.drop(columns=[\"address\", \"description\", \"title\", \"subtitle\"]).to_csv(\"analysis/data/df_exploratory_analysis_2023_11_29.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "ccc294ff-c1c4-4ecb-8a27-0637b223180e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>property_code</th>\n",
+       "      <th>external_reference</th>\n",
+       "      <th>num_photos</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>price</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>operation</th>\n",
+       "      <th>size</th>\n",
+       "      <th>exterior</th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>address</th>\n",
+       "      <th>province</th>\n",
+       "      <th>municipality</th>\n",
+       "      <th>district</th>\n",
+       "      <th>country</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>show_address</th>\n",
+       "      <th>url</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>description</th>\n",
+       "      <th>has_video</th>\n",
+       "      <th>has_lift</th>\n",
+       "      <th>price_by_area</th>\n",
+       "      <th>filters</th>\n",
+       "      <th>furnished</th>\n",
+       "      <th>insert_date</th>\n",
+       "      <th>has_parking_space</th>\n",
+       "      <th>is_parking_space_included_in_price</th>\n",
+       "      <th>parking_space_price</th>\n",
+       "      <th>typology</th>\n",
+       "      <th>sub_typology</th>\n",
+       "      <th>subtitle</th>\n",
+       "      <th>title</th>\n",
+       "      <th>name</th>\n",
+       "      <th>text</th>\n",
+       "      <th>destacado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1471</th>\n",
+       "      <td>103067110</td>\n",
+       "      <td>C0141-00086</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3200.0</td>\n",
+       "      <td>flat</td>\n",
+       "      <td>rent</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Plaza Mayor</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>es</td>\n",
+       "      <td>Sol</td>\n",
+       "      <td>40.416387</td>\n",
+       "      <td>-3.708624</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.idealista.com/inmueble/103067110/</td>\n",
+       "      <td>452</td>\n",
+       "      <td>¡Bienvenido a tu nuevo hogar en el corazón de ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>22.4</td>\n",
+       "      <td>['Alquilar', 'Viviendas', 'Sol', 'De más de 20...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-11-10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>flat</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sol, Madrid</td>\n",
+       "      <td>Piso en Plaza Mayor</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      property_code external_reference  num_photos  floor   price  \\\n",
+       "1471      103067110        C0141-00086          15    4.0  3200.0   \n",
+       "\n",
+       "     property_type operation   size exterior  rooms  bathrooms      address  \\\n",
+       "1471          flat      rent  143.0     True      2          2  Plaza Mayor   \n",
+       "\n",
+       "     province municipality district country neighborhood   latitude  \\\n",
+       "1471   Madrid       Madrid   Centro      es          Sol  40.416387   \n",
+       "\n",
+       "      longitude  show_address                                            url  \\\n",
+       "1471  -3.708624         False  https://www.idealista.com/inmueble/103067110/   \n",
+       "\n",
+       "      distance                                        description  has_video  \\\n",
+       "1471       452  ¡Bienvenido a tu nuevo hogar en el corazón de ...      False   \n",
+       "\n",
+       "      has_lift  price_by_area  \\\n",
+       "1471      True           22.4   \n",
+       "\n",
+       "                                                filters furnished insert_date  \\\n",
+       "1471  ['Alquilar', 'Viviendas', 'Sol', 'De más de 20...       NaN  2023-11-10   \n",
+       "\n",
+       "      has_parking_space  is_parking_space_included_in_price  \\\n",
+       "1471              False                               False   \n",
+       "\n",
+       "      parking_space_price typology sub_typology     subtitle  \\\n",
+       "1471                  NaN     flat          NaN  Sol, Madrid   \n",
+       "\n",
+       "                    title name text  destacado  \n",
+       "1471  Piso en Plaza Mayor  NaN  NaN      False  "
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample()"
+   ]
   }
  ],
  "metadata": {
